k8s/base/second-step/08-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector: { app: client }
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
